force-app/main/default/objects/QuoteLineItem/fields/Line_Item_Detail__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Item Detail</label>
    <referenceTo>Quote_Line_Item_Detail__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>