force-app/main/default/objects/QuoteLineItem/fields/Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Markup_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Markup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>