force-app/main/default/objects/QuoteLineItem/fields/Total_rate__c.field-meta.xml
<CustomField>
    <fullName>Total_rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>