force-app/main/default/objects/QuoteLineItem/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>